--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vue Todo List</title>
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fredoka&family=Nunito+Sans:opsz,wght@6..12,200;6..12,300;6..12,400;6..12,500;6..12,600;6..12,700;6..12,800;6..12,900;6..12,1000&family=Open+Sans:wght@300;400;500;600;700;800&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Raleway:wght@500&display=swap"
+        rel="stylesheet">
     <!-- fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
@@ -24,38 +30,38 @@
 
     <div class="container" id="app">
         <div class="row justify-content-center text-center">
-            <h1 id="main-title" class="my-4">To-do list</h1>
             <div class="col-sm-12 col-md-8 col-lg-6">
+                <h1 id="main-title" class="my-3 ms_title">Todo List</h1>
                 <form>
 
                     <div class="mb-3">
-                        <label for="todoItem" class="form-label">Inserisci qualcosa da aggiungere alla tua to-do
-                            list
-                        </label>
+
                         <input v-model="todoItem.name" type="text" class="form-control" id="todoItem">
+
                     </div>
 
                     <button @click="saveItem" v-on:keyup.enter="saveItem" type="submit"
-                        class="btn btn-primary">Aggiungi</button>
+                        class="btn btn-light">Aggiungi</button>
                 </form>
             </div>
         </div>
 
-        <div class="row justify-content-center text-center">
-            <h2 class="my-4">La tua lista</h2>
+        <div class="row justify-content-center">
             <div class="col-sm-12 col-md-8 col-lg-6">
+                <h2 class="my-4 fst-italic fs-4 px-1 ms_title">La tua lista:</h2>
                 <ul class="list-group">
                     <li v-for="(item, index) in newItems" :key="index"
-                        class="list-group-item d-flex justify-content-between  align-content-center p-2"
-                        :class="{'d-none' : item.name === '', 'ms_highligth' : item.status === true}">
+                        class="list-group-item d-flex justify-content-between  align-content-center m-2 p-2"
+                        :class="{'d-none' : item.name === '', 'ms_highligth-green' : item.status === true, 'ms_highligth-red' : item.status === false}">
 
                         <div class="text mx-2">
                             <p :class="{'ms_linetrough' : item.status === true}" class="m-0">{{ item.name }}</p>
                         </div>
 
                         <div class="icons">
-                            <span @click="highlightItem(index)" class="ms_cursor-pointer mx-2" :class="{'ms_green' : item.status === true}">&checkmark;</span><span
-                                @click="removeItem(index)" class="ms_cursor-pointer mx-2">&Cross;</span>
+                            <span @click="highlightItem(index)" class="ms_cursor-pointer mx-2"
+                                :class="{'ms_green' : item.status === true}">&checkmark;</span><span
+                                @click="removeItem(index)" :class="{'ms_red' : item.status === false}" class="ms_cursor-pointer mx-2">&cross;</span>
                         </div>
 
                     </li>
